# EntityComponentSystem

./: .gitignore  CMakeLists.txt  Component.cpp  Component.h  ComponentHandle.cpp  ComponentHandle.h  ComponentKey.cpp  ComponentKey.h  ComponentNode.cpp  ComponentNode.h  Entity.cpp  Entity.h  Game.cpp  Game.h  HealthComponent.cpp  HealthComponent.h  HealthNameNode.cpp  HealthNameNode.h  NameComponent.cpp  NameComponent.h  NameNode.cpp  NameNode.h  NamePositionNode.cpp  NamePositionNode.h  Node.cpp  Node.h  Observer.cpp  Observer.h  PositionComponent.cpp  PositionComponent.h  PositionHealthNode.cpp  PositionHealthNode.h  PrintNameSystem.cpp  PrintNameSystem.h  System.cpp  System.h  UnitTests.cpp  UnitTests.h  key.cpp  key.h  (+3 more)
